--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>lauren website</title>
 </head>
 <body>
-hello :)
+<p>hello :)</p>
+
+<p>this is lauren's webpage</p>
+
+<p>lots more info here</p>
 </body>
 </html>
